--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td>
         <img src="https://www.kidpaw.com/images/namebg/reshmitha.jpg" alt="Reshmitha profile picture" width=200 height=100> <!-- URL - taken from internet -->
-        <img src="C:\Users\Reshmitha\Desktop\web dev\HTML - Personal site\images\resh.png" alt="reshmitha" width=150 height=100> <!-- taken from PC -->
+        <img src="images/resh.png" alt="reshmitha" width=150 height=100> <!-- taken from PC -->
       </td>
       <td>
         <p>
